Update track event in case of failure